<resources>
    <string name="app_name">Ledger</string>
    <string name="action_settings">Settings</string>
    <string name="enter_cost_hint">Enter Cost</string>
    <string name="what_is_it_for">What is it for</string>
    <string name="description">Description:</string>
    <string name="finish">FINISH</string>
    <string name="create_group">Create Group</string>
    <string name="view_groups">View Groups</string>
    <string name="join_group">Join Group</string>
    <string name="sign_out">Sign Out</string>
    <string name ="back_button">Back</string>
</resources>
