<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ledger.MainActivity">

    <item
        android:id = "@+id/createGroup"
        android:title="@string/create_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_viewgroups"
        android:title="@string/view_groups"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_joingroup"
        android:title="@string/join_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signout"
        android:title="@string/sign_out"
        app:showAsAction="never" />

</menu>
