<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:columnCount="3"
    tools:context=".LogCost">

    <EditText
        android:id="@+id/cost_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:paddingBottom="15dp"
        android:gravity="top"
        android:hint="@string/enter_cost_hint"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/group_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:text="@string/description"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/cost_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:hint="@string/what_is_it_for"
        android:inputType="textAutoCorrect" />

    <Button
        android:id="@+id/finish_log"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"
        android:layout_gravity="bottom"
        android:text="@string/finish"
        />
    <Button
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:text="Back"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_columnWeight="1"/>

</GridLayout>